--- a/views/home.ejs
+++ b/views/home.ejs
@@ -173,9 +173,9 @@
         <div class="Subscribe p-4 mx-5">
           <h6>Subscribe our newsletter</h6>
           <br>
-          <div class="d-flex">
-            <input type="text" name="email" class="" value="" placeholder="Enter Your Email">
-            <button type="submit" name="button" class="mx-2">Subscribe</button>
+          <div class="">
+            <input type="text" name="email" class="m-1" value="" placeholder="Enter Your Email">
+            <button type="submit" name="button" class="m-1">Subscribe</button>
           </div>
         </div>
       </div>
